--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,8 +7,10 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
-</ion-content>
+ <ion-content>
+   <div class="list-item" ion-item *ngFor="let run of runs" (click)="openPage(run)">
+     <div class="border-left"></div>
+     <div class="details-run">{{getDate(run.start_at)}}, {{ months[getMonth(run.start_at)] }} {{getHours(run.start_at)}}:{{getMinutes(run.start_at)}} | <img src="assets/geo.svg" alt="geo cursor" class="geo-img"> {{run.lieu}}</div>
+     <div class="title-run">{{run.title}}</div>
+   </div>
+  </ion-content></ion-content>
