--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,13 +1,19 @@
-<ion-content padding>
+<ion-content>
+  <img src="assets/bg.png" alt="background login" id="bg-login">
+  <div id="container-logo"><img src="assets/logo.png" alt="logo runners" id="logo-login"></div>
 
-  <button ion-center large ion-button icon-right color="light" (click)="scan()" class="qrcode">
-    SCANNER
-    <ion-icon name="camera"></ion-icon>
-  </button>
+  <div id="container-login">
+    <div id="margin-top"></div>
+    <button (click)="scan()" class="qrcode">
+      SCANNER <ion-icon name="camera"></ion-icon>
+    </button>
 
-  <form (submit)="manualKey($event)">
-    <input type="text" name="key" placeholder="Votre Clé" />
-    <button type="submit"><ion-icon name="play"></ion-icon></button>
-  </form>
+    <p id="or-login">ou</p>
+
+    <form (submit)="manualKey($event)">
+      <input type="text" name="key" placeholder="Votre Clé" id="manual-input"/>
+      <button type="submit" id="manual-submit"><ion-icon name="play"></ion-icon></button>
+    </form>
+  </div>
 
 </ion-content>
