--- a/src/pages/runs/runs.html
+++ b/src/pages/runs/runs.html
@@ -8,7 +8,7 @@
 
 <ion-content>
   <ion-content id="container-list">
-    <div class="margin-top"></div>
+    <!--<div class="margin-top"></div>-->
     <div class="list-item" *ngFor="let run of runs" (click)="openPage(run)">
       <div class="card">
         <div class="border-left red"></div>
