Bug display corrections

--- a/src/pages/profil/profil.html
+++ b/src/pages/profil/profil.html
@@ -16,7 +16,7 @@
     <h2>{{user.firstname}} {{user.lastname}}</h2>
     <p>{{user.phoneNumber}}</p>
     <button ion-button clear item-right (click)="callUser()">
-          <ion-icon name="ios-call-outline" style="color: lawngreen"></ion-icon>
+          <ion-icon class="callIcon" name="ios-call-outline" style="color: lawngreen"></ion-icon>
     </button>
   </ion-item>
 </ion-list>
