design integration for the login page

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,15 +1,20 @@
 <ion-content>
+  <div id="container-logo">
+    <img src="assets/logo.png" alt="logo runners" id="logo-login">
+  </div>
+
+  <div id="bg-login"></div>
 
   <ion-slides pager>
 
     <ion-slide>
-      <button style="height:70px; width: 180px;" (click)="scan()">SCANNER <ion-icon name="camera"></ion-icon></button>
+      <button style="height:70px; width: 180px;" (click)="scan()" class="qrcode">SCANNER <ion-icon name="camera"></ion-icon></button>
     </ion-slide>
 
     <ion-slide>
       <form (submit)="manually($event)">
-        <input type="text" name="key" placeholder="Votre Clé"/>
-        <button type="submit"><ion-icon name="play"></ion-icon></button>
+        <input type="text" name="key" placeholder="Votre Clé" id="manual-input"/>
+        <button type="submit" id="manual-submit"><ion-icon name="play"></ion-icon></button>
       </form>
     </ion-slide>
 
