--- a/src/pages/runs/runs.html
+++ b/src/pages/runs/runs.html
@@ -41,7 +41,7 @@
           <p>
             <strong>{{run.beginAt | date:'yMMMd'}}</strong> {{run.beginAt | date:'jm'}}
           </p>
-          <p>{{run.waypoints[0].nickname}}</p>
+          <p>{{run.waypoints.length > 0 ? run.waypoints[0].nickname : ''}}</p>
         </ion-label>
       </ion-item>
 
