--- a/src/pages/runner/runner.html
+++ b/src/pages/runner/runner.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Nom du Run (fake-backend)</ion-title>
+    <ion-title>{{ run }}</ion-title>
   </ion-navbar>
 
 </ion-header>
