--- a/src/pages/profil/profil.html
+++ b/src/pages/profil/profil.html
@@ -2,6 +2,7 @@
 
   <ion-navbar>
     <ion-title><ion-icon name="ios-profil"></ion-icon> Info runner</ion-title>
+    <ion-icon class="wifi-status" *ngIf="!this.InternetStatus.getConnectionStatus()" name="wifi"></ion-icon>
   </ion-navbar>
 
 </ion-header>
