--- a/src/pages/runner/runner.html
+++ b/src/pages/runner/runner.html
@@ -2,6 +2,7 @@
 
   <ion-navbar>
     <ion-title>{{ run }}</ion-title>
+    <ion-icon class="wifi-status" *ngIf="!this.InternetStatus.getConnectionStatus()" name="wifi"></ion-icon>
   </ion-navbar>
 
 </ion-header>
