--- a/src/pages/vehicle/vehicle.html
+++ b/src/pages/vehicle/vehicle.html
@@ -1,14 +1,9 @@
-<!--
-  Generated template for the Vehicle page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
     <ion-title>
       <ion-icon name="ios-profil"></ion-icon>Véhicule</ion-title>
+      <ion-icon class="wifi-status" *ngIf="!this.InternetStatus.getConnectionStatus()" name="wifi"></ion-icon>
   </ion-navbar>
 
 </ion-header>
