--- a/src/pages/runs/runs.html
+++ b/src/pages/runs/runs.html
@@ -8,17 +8,18 @@
   </ion-navbar>
 
   <div padding>
-    <ion-segment [(ngModel)]="old">
-      <ion-segment-button [value]="x">
-        Tous les runs
-      </ion-segment-button>
-      <ion-segment-button [value]="x">
-        Mes runs
-      </ion-segment-button>
-      <ion-segment-button [value]="x">
-        Terminé
-      </ion-segment-button>
-    </ion-segment>
+    <ion-item>
+      <ion-label>Mes runs</ion-label>
+      <ion-checkbox (ionChange)="this.onFilterClick('mine')" checked="{{filters.mine.isEnabled}}"></ion-checkbox>
+    </ion-item>
+    <ion-item>
+      <ion-label>Terminés</ion-label>
+      <ion-checkbox (ionChange)="this.onFilterClick('hideCompleted')" checked="{{filters.hideCompleted.isEnabled}}"></ion-checkbox>
+    </ion-item>
+    <ion-item>
+      <ion-label>Prêts</ion-label>
+      <ion-checkbox (ionChange)="onFilterClick('hideNotReady')" checked="{{filters.hideNotReady.isEnabled}}"></ion-checkbox>
+    </ion-item>
   </div>
 </ion-header>
 
