--- a/src/pages/runs/runs.html
+++ b/src/pages/runs/runs.html
@@ -5,6 +5,7 @@
       <ion-icon name="ios-clipboard-outline"></ion-icon> Board
     </ion-title>
     <ion-icon class="wifi-status" *ngIf="!this.InternetStatus.getConnectionStatus()" name="wifi"></ion-icon>
+    <ion-icon class="open-filters" name="color-wand" (click)="openModal()"></ion-icon>
   </ion-navbar>
 
   <div padding>
