Added urgent button

--- a/src/pages/runs/runs.html
+++ b/src/pages/runs/runs.html
@@ -5,7 +5,7 @@
       <ion-icon name="ios-clipboard-outline"></ion-icon> Board
     </ion-title>
     <ion-icon class="wifi-status" *ngIf="!this.InternetStatus.getConnectionStatus()" name="wifi"></ion-icon>
-    <!-- <ion-icon class="open-filters" name="color-wand" (click)="openModal()"></ion-icon> -->
+    <ion-icon class="filter filter__urgent {{filters.urgent.isEnabled?'filter__urgent--enabled':''}}" (click)="this.onFilterClick('urgent')">{{nbUrgentRuns()}}</ion-icon>
   </ion-navbar>
   <div class="filters" padding>
     <div class="filter" style="display: inline-block;">
