--- a/src/pages/runs/runs.html
+++ b/src/pages/runs/runs.html
@@ -1,12 +1,12 @@
 <ion-header>
 
   <ion-navbar>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
     <ion-title>
-      <ion-icon name="ios-clipboard-outline"></ion-icon> Board
+      <ion-icon name="ios-clipboard-outline"></ion-icon>&nbsp;Board&nbsp;<ion-icon class="wifi-status" *ngIf="!this.InternetStatus.getConnectionStatus()" name="wifi"></ion-icon>
     </ion-title>
-    <ion-icon class="wifi-status" *ngIf="!this.InternetStatus.getConnectionStatus()" name="wifi"></ion-icon>
-    <ion-icon class="open-filters" name="color-wand" (click)="openModal()"></ion-icon>
-    <ion-icon name="settings" icon-right (click)="openSettings()"></ion-icon>
   </ion-navbar>
 </ion-header>
 
