--- a/src/pages/runs/runs.html
+++ b/src/pages/runs/runs.html
@@ -5,10 +5,10 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-      <ion-icon name="ios-clipboard-outline"></ion-icon>&nbsp;Board&nbsp;<ion-icon class="wifi-status" *ngIf="!this.InternetStatus.getConnectionStatus()" name="wifi"></ion-icon>
+      <ion-icon class="wifi-status" *ngIf="!this.InternetStatus.getConnectionStatus()" name="wifi" ></ion-icon><ion-icon name="ios-clipboard-outline"></ion-icon>&nbsp;Board&nbsp;<ion-icon *ngIf="nbUrgentRuns()" class="filter filter__urgent {{filters.urgent.isEnabled?'filter__urgent--enabled':''}}" (click)="this.onFilterClick('urgent')">{{nbUrgentRuns()}}</ion-icon>
     </ion-title>
-  
-    <ion-icon class="filter filter__urgent {{filters.urgent.isEnabled?'filter__urgent--enabled':''}}" (click)="this.onFilterClick('urgent')">{{nbUrgentRuns()}}</ion-icon>
+
+
   </ion-navbar>
   <div class="filters" padding>
     <div class="filter" style="display: inline-block;">
