added setting api

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -27,6 +27,13 @@
 
     <button ion-button full icon-start (click)="logout()"><ion-icon name="log-out"></ion-icon> Log out</button>
   </ion-item>
+  <ion-item>
+    <ion-label color='primary'>API</ion-label>
+    <ion-input  [(ngModel)]="apiValue"></ion-input>
+  </ion-item>
+  <ion-item>
+    <button ion-button full icon-start (click)="setApi()"><ion-icon name="create"></ion-icon>Changer l'api</button>
+  </ion-item>
 
 
 
