--- a/src/pages/runs/runs.html
+++ b/src/pages/runs/runs.html
@@ -4,7 +4,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>
+    <ion-title class="runs-title-fix">
       <ion-icon name="ios-clipboard-outline"></ion-icon>&nbsp;Board&nbsp;
     </ion-title>
     <ion-icon *ngIf="nbUrgentRuns() || filters.urgent.isEnabled"
