Finished last refresh of data
Wrapped the cache module in provider, and now on save changes the date of last refresh

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,7 +9,7 @@
 
 <ion-menu [content]="content" id="mainMenu" [persistent]="false">
   <ion-header>
-    <p>&nbsp;</p>
+    <p><small>Dernier rafraichissement : {{ lastRefresh | date:' d MMMM y@h:mm:ss' }}</small></p>
     <!--<button ion-item menuClose="mainMenu" detail-none end>-->
       <!--<ion-icon name="close"></ion-icon>-->
     <!--</button>-->
