--- a/src/pages/runs/runs.html
+++ b/src/pages/runs/runs.html
@@ -70,16 +70,17 @@
   <!--</ion-list>-->
 
   <ion-list [virtualScroll]="getRuns()" [headerFn]="headerFn" approxItemHeight="60px">
-    
+
     <ion-item-divider sticky *virtualHeader="let header">
       <ion-label>{{ header }}</ion-label>
     </ion-item-divider>
+
     <ion-item *virtualItem="let run" (click)="showRun(run)" [attr.status]="run.status">
       <ion-label class="run">
         <ion-grid>
           <ion-row>
             <ion-col><h2 class="run__title">{{run.title}}</h2></ion-col>
-            <ion-col><p class="run__time">{{run.beginAt | date:'shortTime'}}</p></ion-col>
+            <ion-col><p class="run__time">{{run.beginAt }}</p></ion-col>
           </ion-row>
           <ion-row>
             <ion-col><p class="run__waypoint">{{run.waypoints.length > 0 ? run.waypoints[0].nickname : ''}}</p>
