--- a/src/pages/splash/splash.html
+++ b/src/pages/splash/splash.html
@@ -4,20 +4,13 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title><ion-icon name="refresh">&nbsp;</ion-icon>{{title}}</ion-title>
-  </ion-navbar>
-
-</ion-header>
 
 
-<ion-content padding>
+<ion-content >
   <div class="container_flex">
     <div style="text-align:center">
-      <ion-icon name="refresh"></ion-icon>
-      <br/> some text
+      <ion-spinner></ion-spinner>
+      <br/> Chargements des données...
     </div>
   </div>
 </ion-content>
