--- a/src/pages/drivers/drivers.html
+++ b/src/pages/drivers/drivers.html
@@ -13,5 +13,21 @@
 
 
 <ion-content>
+    <ion-refresher (ionRefresh)="refreshDrivers($event)">
+      <ion-refresher-content></ion-refresher-content>
+    </ion-refresher>
 
+    <ion-list>
+        <ion-item *ngFor="let driver of getDrivers()" (click)="showDriver(driver)">
+          <ion-label class="driver">
+            <h2>{{ driver.firstname }} {{ driver.lastname }}</h2>
+          </ion-label>
+        </ion-item>
+      <ion-item *ngIf="!getDrivers().length">
+        <ion-label>
+          <p>Aucun Conducteur</p>
+        </ion-label>
+      </ion-item>
+
+    </ion-list>
 </ion-content>
