--- a/src/pages/drivers/drivers.html
+++ b/src/pages/drivers/drivers.html
@@ -18,7 +18,7 @@
     </ion-refresher>
 
     <ion-list>
-        <ion-item *ngFor="let driver of getDrivers()" (click)="showDriver(driver)">
+        <ion-item *ngFor="let driver of getDrivers()">
           <ion-label class="driver">
             <h2>{{ driver.firstname }} {{ driver.lastname }}</h2>
           </ion-label>
