--- a/src/pages/driver/driver.html
+++ b/src/pages/driver/driver.html
@@ -1,18 +1,20 @@
-<!--
-  Generated template for the DriverPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>driver</ion-title>
+    <ion-title>Driver info</ion-title>
+    <!-- <ion-icon class="wifi-status" *ngIf="!this.InternetStatus.getConnectionStatus()" name="wifi"></ion-icon> -->
   </ion-navbar>
 
 </ion-header>
 
-
-<ion-content padding>
-
+<ion-content>
+    <ion-list>
+        <ion-item *ngIf="driver">
+            <ion-thumbnail item-left>
+                <img [src]="driver.image_profile">
+            </ion-thumbnail>
+            <h2>{{ driver.firstname }} {{ driver.lastname }}</h2>
+            <p>{{ driver.phoneNumber }}</p>
+        </ion-item>
+    </ion-list>
 </ion-content>
