--- a/src/pages/calendar/calendar.html
+++ b/src/pages/calendar/calendar.html
@@ -14,6 +14,6 @@
 
 <ion-content>
 
-  <angular2-fullcalendar [options]="calendarOptions"></angular2-fullcalendar>
+  <angular2-fullcalendar #calendar [options]="calendarOptions"></angular2-fullcalendar>
 
 </ion-content>
